Ndyrishimi lidhja e linqeve ne gjitha faqet, ndryshim tek aboutus me foto lokacion , etj.

--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="sq">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP - About Us</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <header class="navbar">
     <div class="container">
@@ -23,31 +25,77 @@
     </div>
   </header>
 
-  <main class="container">
-    <h2>Rreth Nesh</h2>
-    <div class="about-content">
-      <p>
-        <strong>ECO SHOP</strong> është një iniciativë e dedikuar promovimit të jetës së qëndrueshme përmes produkteve 100% biologjike dhe natyrale.
-        Ne besojmë se çdo blerje që bëni mund të ketë një ndikim pozitiv në planetin tonë – dhe ne jemi këtu për t’ju ndihmuar të zgjidhni më mirë.
-      </p>
-      <p>
-        Të gjitha produktet tona vijnë nga burime lokale, ekologjike dhe etike, pa përdorur pesticidë, herbicide apo përpunim të tepruar.
-        Që nga frutat e freskëta deri te kujdesi personal, çdo artikull është zgjedhur me kujdes për shëndetin tuaj dhe mjedisin.
-      </p>
-      <p>
-        Themeluar në vitin 2022, ECO SHOP ka rritur komunitetin e tij të konsumatorëve të vetëdijshëm në të gjithë Shqipërinë.
-        Missioni ynë është i thjeshtë: <em>natyra në çdo shtëpi</em>.
-      </p>
+  <main>
+    <div class="container" style="margin-top: 40px; text-align: center;">
+      <h1 style="font-size: 2.5rem; color: var(--text);">Rreth Nesh</h1>
+      <p style="color: #666; margin-top: 10px;">Natyra në çdo shtëpi</p>
     </div>
 
-    <div class="values">
-      <h3>Vlerat Tona</h3>
-      <ul>
-        <li> <strong>Qëndrueshmëria:</strong> Paketim i ri-përdorshëm dhe zero-plastik.</li>
-        <li> <strong>Shëndeti:</strong> Produktet pa kimikate të rrezikshme.</li>
-        <li> <strong>Bashkëpunimi lokal:</strong> Mbështetja e fermerëve shqiptarë.</li>
-      </ul>
-    </div>
+    <section class="container about-story">
+      <div class="story-text">
+        <h2>Historia Jonë</h2>
+        <p>
+          <strong>ECO SHOP</strong> është një iniciativë e dedikuar promovimit të jetës së qëndrueshme përmes produkteve
+          100% biologjike dhe natyrale.
+          Ne besojmë se çdo blerje që bëni mund të ketë një ndikim pozitiv në planetin tonë – dhe ne jemi këtu për t’ju
+          ndihmuar të zgjidhni më mirë.
+        </p>
+        <p>
+          Të gjitha produktet tona vijnë nga burime lokale, ekologjike dhe etike, pa përdorur pesticidë, herbicide apo
+          përpunim të tepruar.
+          Që nga frutat e freskëta deri te kujdesi personal, çdo artikull është zgjedhur me kujdes për shëndetin tuaj
+          dhe mjedisin.
+        </p>
+        <p>
+          Themeluar në vitin 2022, ECO SHOP ka rritur komunitetin e tij të konsumatorëve të vetëdijshëm në të gjithë
+          Shqipërinë.
+          Missioni ynë është i thjeshtë: <em>natyra në çdo shtëpi</em>.
+        </p>
+        <p>
+          Përkushtimi ynë ndaj cilësisë është i panegociueshëm. Ne vizitojmë rregullisht fermat partnere për të
+          garantuar
+          që standardet bio të respektohen në cdo hap, nga mbjellja deri tek vjelja.
+        </p>
+      </div>
+      <div class="story-image" style="display: flex; justify-content: center;">
+        <img src="img/about-story.png" alt="Eco Shop Story" style="max-width: 75%; border-radius: 12px;">
+      </div>
+    </section>
+
+
+    <section class="about-values">
+      <div class="container">
+        <h2>Vlerat Tona</h2>
+        <div class="values-grid">
+          <div class="value-card">
+            <span class="icon">🌿</span>
+            <h3>Qëndrueshmëria</h3>
+            <p>Paketim i ri-përdorshëm dhe zero-plastik për një të ardhme më të pastër.</p>
+          </div>
+          <div class="value-card">
+            <span class="icon">💚</span>
+            <h3>Shëndeti</h3>
+            <p>Produktet pa kimikate të rrezikshme, të sigurta për ju dhe familjen tuaj.</p>
+          </div>
+          <div class="value-card">
+            <span class="icon">🤝</span>
+            <h3>Bashkëpunimi lokal</h3>
+            <p>Mbështetja e fermerëve shqiptarë dhe ekonomisë vendase.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="container about-location">
+      <h2>Na gjeni këtu</h2>
+      <div class="map-wrapper">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47273.23890872553!2d20.69339826570467!3d42.2234752897113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1353950a12f4301f%3A0xda0e2e9b8d3d5850!2sPrizren%2020000!5e0!3m2!1sen!2s!4v1765827413510!5m2!1sen!2s"
+          width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -57,4 +105,5 @@
     </div>
   </footer>
 </body>
+
 </html>
