--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="sq">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP - Contact</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <header class="navbar">
     <div class="container">
@@ -14,7 +16,11 @@
       </div>
       <nav>
         <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="products.html">Products</a>
+        <a href="news.html">News</a>
         <a href="contact.html">Contact</a>
+        <a href="login.html" class="btn">Login</a>
       </nav>
     </div>
   </header>
@@ -45,4 +51,5 @@
 
   <script src="js/validation.js"></script>
 </body>
+
 </html>
