--- a/news.html
+++ b/news.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="sq">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP - Lajmet</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <header class="navbar">
     <div class="container">
@@ -14,9 +16,11 @@
       </div>
       <nav>
         <a href="index.html">Home</a>
-        <a href="product.html">Produktet</a>
-        <a href="news.html">Lajmet</a>
-        <a href="contact.html">Kontakt</a>
+        <a href="about.html">About Us</a>
+        <a href="products.html">Products</a>
+        <a href="news.html">News</a>
+        <a href="contact.html">Contact</a>
+        <a href="login.html" class="btn">Login</a>
       </nav>
     </div>
   </header>
@@ -29,7 +33,8 @@
         <h3> Frutat e Reja Bio Janë Këtu!</h3>
         <p class="date">10 Dhjetor 2025</p>
         <p>
-          Stina e frutave të freskëta ka filluar! Tashmë në ofertë: <strong>mollë</strong>, <strong>banane</strong> dhe <strong>frëza</strong>
+          Stina e frutave të freskëta ka filluar! Tashmë në ofertë: <strong>mollë</strong>, <strong>banane</strong> dhe
+          <strong>frëza</strong>
           nga fermat lokale. Të gjitha pa pesticide, të paketuara me kujdes për të ruajtur freskinë dhe aromën natyrale.
         </p>
       </div>
@@ -38,7 +43,8 @@
         <h3> Pijet e Reja Organike në Ofertë</h3>
         <p class="date">28 Nëntor 2025</p>
         <p>
-          Keni kërkuar — ne e kemi sjellë! <strong>Lëng i portokallit</strong> dhe <strong>Qumësht bajame </strong> tashmë janë në katalogun tonë.
+          Keni kërkuar — ne e kemi sjellë! <strong>Lëng i portokallit</strong> dhe <strong>Qumësht bajame </strong>
+          tashmë janë në katalogun tonë.
           Të prodhuara lokal, pa shtesa kimike dhe të paketuara në amballazh të riciklueshëm.
         </p>
       </div>
@@ -47,7 +53,8 @@
         <h3> “Add to Cart” Tashmë Funksionon!</h3>
         <p class="date">15 Nëntor 2025</p>
         <p>
-          Tashmë mund të shtoni produktet në shportë me një klik! Testoni funksionalitetin me çdo produkt — nga <strong>karotat bio</strong>
+          Tashmë mund të shtoni produktet në shportë me një klik! Testoni funksionalitetin me çdo produkt — nga
+          <strong>karotat bio</strong>
           deri te <strong>kremat për fytyrë</strong>. Në fazën e ardhshme, do të shtojmë pagesën online.
         </p>
       </div>
@@ -56,7 +63,8 @@
         <h3> Dërgesat Tani Me Amballazh të Riciklueshëm</h3>
         <p class="date">5 Nëntor 2025</p>
         <p>
-          Në kuadër të angazhimit tonë për mjedisin, të gjitha dërgesat tashmë përdorin kuti prej kartoni të ricikluar dhe mbushës
+          Në kuadër të angazhimit tonë për mjedisin, të gjitha dërgesat tashmë përdorin kuti prej kartoni të ricikluar
+          dhe mbushës
           nga letër e përdorur. Një hap i vogël — por i rëndësishëm — për një të ardhme më të gjelbërt!
         </p>
       </div>
@@ -70,4 +78,5 @@
     </div>
   </footer>
 </body>
+
 </html>
