--- a/products.html
+++ b/products.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="sq">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP - Products</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
   <header class="navbar">
     <div class="container">
@@ -38,7 +40,7 @@
     </div>
 
     <div id="products-container" class="products-grid">
-
+      <!-- Produktet do të gjenerohen me JS -->
     </div>
   </main>
 
@@ -51,4 +53,4 @@
 
   <script src="js/products.js"></script>
 </body>
-</html>
+</htm
