--- a/login.html
+++ b/login.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="sq">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP - Login</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
+  <header class="navbar">
+    <div class="container">
+      <div class="logo">
+        <span class="logo-text">ECO</span><span class="logo-text highlight">SHOP</span>
+      </div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="products.html">Products</a>
+        <a href="news.html">News</a>
+        <a href="contact.html">Contact</a>
+        <a href="login.html" class="btn">Login</a>
+      </nav>
+    </div>
+  </header>
   <div class="auth-container">
     <h2>Hyr në Llogarinë Tënde</h2>
     <form id="loginForm">
       <label>Roli:</label>
-<div class="radio-group">
-  <label class="radio-option">
-    <input type="radio" name="role" value="guest" checked>
-    Guest
-  </label>
-  <label class="radio-option">
-    <input type="radio" name="role" value="admin">
-    Admin
-  </label>
-</div>
+      <div class="radio-group">
+        <label class="radio-option">
+          <input type="radio" name="role" value="guest" checked>
+          Guest
+        </label>
+        <label class="radio-option">
+          <input type="radio" name="role" value="admin">
+          Admin
+        </label>
+      </div>
 
       <label for="username">Username:</label>
       <input type="text" id="username" required>
@@ -42,7 +59,7 @@
   </footer>
 
   <script>
-    document.getElementById('loginForm').addEventListener('submit', function(e) {
+    document.getElementById('loginForm').addEventListener('submit', function (e) {
       e.preventDefault();
       const role = document.querySelector('input[name="role"]:checked').value;
       const username = document.getElementById('username').value.trim();
@@ -70,4 +87,5 @@
     });
   </script>
 </body>
+
 </html>
