--- a/register.html
+++ b/register.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="sq">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP - Regjistrohu</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
+  <header class="navbar">
+    <div class="container">
+      <div class="logo">
+        <span class="logo-text">ECO</span><span class="logo-text highlight">SHOP</span>
+      </div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="products.html">Products</a>
+        <a href="news.html">News</a>
+        <a href="contact.html">Contact</a>
+        <a href="login.html" class="btn">Login</a>
+      </nav>
+    </div>
+  </header>
   <div class="auth-container">
     <h2>Krijo Llogarinë Tënde</h2>
     <form id="registerForm">
@@ -39,7 +56,7 @@
   </footer>
 
   <script>
-    document.getElementById('registerForm').addEventListener('submit', function(e) {
+    document.getElementById('registerForm').addEventListener('submit', function (e) {
       e.preventDefault();
 
       const name = document.getElementById('regName').value.trim();
@@ -93,4 +110,5 @@
     });
   </script>
 </body>
+
 </html>
