--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ECO SHOP — Natyra, e pakontaminuar</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com/css2">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@500;700;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="CSS/Style.css" />
 </head>
 
@@ -26,23 +31,70 @@
     </div>
   </header>
 
-  <!-- HERO MODERN -->
-  <main class="hero-modern">
-    <div class="hero-content">
-      <h1>Frutat siç duhet të jenë.<br><span class="highlight-text">Të freskëta. Të pastra. Të tua.</span></h1>
-      <p class="hero-subtitle">Pa pesticide. Pa ambalazhe të tepruara. Me shijen e vërtetë të natyrës.</p>
-      <div class="hero-cta">
-        <a href="products.html" class="btn btn-primary">Shiko koleksionin</a>
-        <a href="#offer" class="btn btn-outline">Zbritja e javës →</a>
+  <!-- HERO PREMIUM -->
+  <main class="hero-premium">
+    <div class="container hero-container">
+      <div class="hero-content">
+        <span class="badge-pill">🌿 100% Organike</span>
+        <h1>Frutat siç duhet të jenë.<br><span class="highlight-text">Të freskëta. Të pastra.</span></h1>
+        <p class="hero-subtitle">Pa pesticide. Pa ambalazhe të tepruara. Zbuloni shijen e vërtetë të natyrës direkt në
+          derën tuaj.</p>
+        <div class="hero-cta">
+          <a href="products.html" class="btn btn-primary-hero">
+            <span>Shiko Koleksionin</span>
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              stroke-linecap="round" stroke-linejoin="round">
+              <line x1="5" y1="12" x2="19" y2="12"></line>
+              <polyline points="12 5 19 12 12 19"></polyline>
+            </svg>
+          </a>
+          <a href="#offer" class="btn btn-outline-hero">Ofertat →</a>
+        </div>
+
+        <div class="trust-indicators">
+          <div class="trust-item">
+            <div class="icon-box">🚚</div>
+            <div class="text">
+              <strong>Dërgesë 24h</strong>
+              <small>Në të gjithë vendin</small>
+            </div>
+          </div>
+          <div class="trust-item">
+            <div class="icon-box">🛡️</div>
+            <div class="text">
+              <strong>Garanci 100%</strong>
+              <small>Kthim parash</small>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <!-- DEKORIMI — HARKU ABSTRAKT -->
-    <div class="hero-deco">
-      <svg viewBox="0 0 100 100" class="deco-arc" aria-hidden="true">
-        <path d="M10,90 C30,70 70,70 90,90" stroke="var(--accent)" stroke-width="2" fill="none" opacity="0.15" />
-        <path d="M10,10 C30,30 70,30 90,10" stroke="var(--accent)" stroke-width="2" fill="none" stroke-dasharray="6,4"
-          opacity="0.1" />
-      </svg>
+
+      <!-- HERO IMAGE / VISUAL -->
+      <div class="hero-visual">
+        <div class="image-wrapper-premium">
+          <img src="img/hero-bg.png" alt="Fruta Organike" class="main-img">
+
+          <!-- Floating Elements for depth -->
+          <div class="floating-card glass top-right">
+            <span>🍊</span>
+            <div>
+              <strong>Ultra Freskët</strong>
+              <small>Vjelur sot</small>
+            </div>
+          </div>
+
+          <div class="floating-card glass bottom-left">
+            <span>⭐</span>
+            <div>
+              <strong>4.9/5</strong>
+              <small>Nga Klientët</small>
+            </div>
+          </div>
+        </div>
+        <!-- Abstract Bg Blobs -->
+        <div class="blob blob-1"></div>
+        <div class="blob blob-2"></div>
+      </div>
     </div>
   </main>
 
